--- a/src/components/AddTodo/AddTodo.module.css
+++ b/src/components/AddTodo/AddTodo.module.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   align-items: center;
   padding-bottom: 1rem;
-  border-bottom: 2px solid #aaa;
+  border-bottom: 2px solid rgb(255, 102, 0);
   margin-bottom: 1rem;
 }
 
@@ -12,6 +12,7 @@
   color: white;
   font-weight: 700;
   letter-spacing: 1px;
+  margin-bottom: 5px;
 }
 
 .addtodo-form input {
@@ -20,4 +21,8 @@
   border-radius: 10px;
   border: 2px solid #aaa;
   padding: 0.5rem 0.75rem;
+}
+
+.addtodo-form input:focus {
+  border-color: rgb(255, 102, 0);
 }
