--- a/src/components/Todos/TodoItem.module.css
+++ b/src/components/Todos/TodoItem.module.css
@@ -3,7 +3,7 @@
   flex-direction: row;
   justify-content: space-between;
   margin: 0.5rem;
-  border-bottom: 1px solid #aaa;
+  border-bottom: 1px solid rgb(255, 102, 0);
   padding-bottom: 1rem;
 }
 
