--- a/src/components/UI/Title.module.css
+++ b/src/components/UI/Title.module.css
@@ -1,7 +1,8 @@
 .title {
   color: white;
-  border-bottom: 2px solid #aaa;
+  border-bottom: 2px solid rgb(255, 102, 0);
   margin-bottom: 1.5rem;
+  padding-bottom: 1.5rem;
   text-transform: uppercase;
   letter-spacing: 1px;
   font-weight: 700;
