--- a/src/App.css
+++ b/src/App.css
@@ -8,16 +8,15 @@ body {
   display: flex;
   justify-content: center;
   height: 100vh;
-  background: #222;
+  background: #fff;
 }
 
 .App {
-  border: 3px solid rgb(255, 102, 0);
-  border-radius: 15px;
+  border: 1px solid #bbb;
   padding: 2rem 1.5rem;
   text-align: center;
   margin-top: 5rem;
   min-width: 400px;
-  background-color: #333;
-  color: white;
+  background-color: white;
+  color: black;
 }
