--- a/src/components/AddTodo/AddTodo.module.css
+++ b/src/components/AddTodo/AddTodo.module.css
@@ -3,13 +3,13 @@
   flex-direction: column;
   align-items: center;
   padding-bottom: 1rem;
-  border-bottom: 2px solid rgb(255, 102, 0);
+  border-bottom: 2px solid #ddd;
   margin-bottom: 1rem;
 }
 
 .addtodo-form label {
   text-transform: uppercase;
-  color: white;
+  color: black;
   font-weight: 700;
   letter-spacing: 1px;
   margin-bottom: 5px;
@@ -19,10 +19,10 @@
   margin-bottom: 1.5rem;
   width: 60%;
   border-radius: 10px;
-  border: 2px solid #aaa;
+  border: 2px solid rgb(255, 102, 0);
   padding: 0.5rem 0.75rem;
 }
 
 .addtodo-form input:focus {
-  border-color: rgb(255, 102, 0);
+  border-color: black;
 }
