--- a/src/components/Todos/TodoItem.module.css
+++ b/src/components/Todos/TodoItem.module.css
@@ -3,7 +3,7 @@
   flex-direction: row;
   justify-content: space-between;
   margin: 0.5rem;
-  border-bottom: 1px solid rgb(255, 102, 0);
+  border-bottom: 1px solid #ddd;
   padding-bottom: 1rem;
 }
 
@@ -19,5 +19,5 @@
 
 .todo-item__title,
 .todo-item__description {
-  color: #ddd;
+  color: black;
 }
