--- a/src/components/UI/Button.module.css
+++ b/src/components/UI/Button.module.css
@@ -1,14 +1,14 @@
 .button {
   border-radius: 10px;
-  border: 2px solid white;
+  border: 2px solid rgb(255, 102, 0);
   text-transform: uppercase;
   font-weight: bold;
   transition: background 0.25s ease-in-out;
   padding: 0.5rem 0.75rem;
-  background: rgb(255, 102, 0);
-  color: white;
+  background: white;
+  color: rgb(255, 102, 0);
 }
 
 .button:hover {
-  background-color: rgb(255, 55, 0);
+  background-color: #ddd;
 }
