--- a/src/components/UI/Title.module.css
+++ b/src/components/UI/Title.module.css
@@ -1,6 +1,6 @@
 .title {
-  color: white;
-  border-bottom: 2px solid rgb(255, 102, 0);
+  color: rgb(255, 102, 0);
+  border-bottom: 2px solid #ddd;
   margin-bottom: 1.5rem;
   padding-bottom: 1.5rem;
   text-transform: uppercase;
