--- a/src/components/UI/Button.module.css
+++ b/src/components/UI/Button.module.css
@@ -4,12 +4,18 @@
   height: 2.5rem;
   text-transform: uppercase;
   font-weight: bold;
-  transition: background 0.25s ease-in-out;
+  transition: all 0.2s ease-in-out;
   padding: 0.5rem 0.75rem;
   background: white;
   color: rgb(255, 102, 0);
 }
 
 .button:hover {
-  background-color: #ddd;
+  transform: translateY(-4%);
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 6px 20px 0px;
+}
+
+.button:active {
+  transform: translateY(0%);
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 4px 15px 0px;
 }
